styling edits, need to fix div that has gap between form and header

--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,19 @@ mark {
   background-color: indianred;
 }
 
-.footer {
+.App {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* .footer {
   background-color: rgba(219, 157, 157, 0.753);
   font-weight: bold;
+  position: absolute;
   text-decoration: underline 2px;
   font-style: italic;
   height: 25px;
   width: 100%;
-  bottom: 0;
-}
+} */
